# image-checker

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  initial.md  test_new_datetime_format.json  test_new_location_format.sh  test_validation.rs
.claude/: settings.local.json
.claude/commands/: generate-prp.md
examples/: example01-just_summary.md  example02-validate_content_and_metadata.md  example03-validate_content_and_metadata.md  example04-invalid_data.md
prp/: image-checker.md
prp/templates/: prp_base.md
src/: config.rs  handlers.rs  lib.rs  main.rs  models.rs  queue.rs  storage.rs  utils.rs
src/validation/: exif.rs  llm.rs  mod.rs  processor.rs
tests/: integration_tests.rs  test_validation.rs  validation_tests.rs
