[package]
name = "image-checker"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and async runtime
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization and HTTP client
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.10", features = ["json", "rustls-tls"], default-features = false }

# Image and EXIF processing
kamadak-exif = "0.5.4"
base64 = "0.21"

# Configuration and environment
envy = "0.4"
dotenvy = "0.15"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling and utilities
thiserror = "1.0"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"